[package]
name = "csl-mobile-bridge"
version = "7.3.2"
authors = ["EMURGO"]
edition = "2018"

[build-dependencies]
cbindgen = "=0.14.1"

[patch.crates-io]
cryptoxide = { git = "https://github.com/emurgo/cryptoxide", tag="0.4.4"}

[dependencies]
cardano-serialization-lib = "=13.2.1"
byteorder = "1.4.3"
base64 = "0.20.0"
# tag = "2.3.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.20.0"

[lib]
name = "react_native_haskell_shelley"
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = false
opt-level = 's'
lto = false
